# vessel

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  fly.toml  pyproject.toml
scripts/: post_deploy_test.sh
tests/: _pwa_app.py  conftest.py  test_assistant.py  test_crud.py  test_fly_live.py  test_mcp.py  test_observability.py  test_phoenix_live.py  test_priority.py  test_pwa_routes.py  test_pwa_ui.py  test_pwa_ui_live.py  test_state.py  test_users_and_encryption.py
vessel/: __init__.py  auth.py  config.py  crud.py  db.py  encryption.py  main.py  mcp_routes.py  mcp_server.py  observability.py  phoenix_verify.py  users.py
vessel/assistant/: __init__.py  chat_assistant.py  skip_assistant.py  tool_loop.py  tool_schema.py
vessel/llm/: __init__.py  adapter.py  anthropic_llm.py  groq_llm.py
vessel/migrations/: 001_initial.sql  002_multi_user.sql  003_task_history.sql
vessel/models/: __init__.py  enums.py  state.py
vessel/pwa/: routes.py
vessel/pwa/static/: app.js  disclaimer.html  index.html  manifest.json  service-worker.js  styles.css
vessel/scheduler/: priority.py  state_manager.py  task_history.py
