[project]
name = "vessel"
version = "0.1.0"
description = "Personal agent system — event-driven reducer over a single JSONB state"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "asyncpg>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "apscheduler>=3.10",
    "python-dotenv>=1.0",
    "tzdata>=2024.1",
    "anthropic>=0.40",
    "openai>=1.40",
    "mcp>=1.0",
    "arize-phoenix-otel>=0.6",
    "openinference-instrumentation-anthropic>=0.1",
    "openinference-instrumentation-openai>=0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]
ui-test = [
    "playwright>=1.45",
    "pytest-playwright>=0.5",
]

[project.scripts]
vessel = "vessel.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vessel"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
